@@ -596,3 +596,4 @@ Added the list-bandwidth.pl command-line script for displaying usage by domain, 
 Added script installer for Simple Machines Forum.
 Added a server templates option to set the default timeout for the HTTP status monitor feature.
 The number of days to keep old bandwidth data can now be configured on the Bandwidth Monitoring page.
+Added the list-features.pl script, for finding available features for new virtual servers.
